separação e envio de metricas