@@ -6,6 +6,7 @@ package org.example.services;
 
 import com.github.britooo.looca.api.core.Looca;
 import com.github.britooo.looca.api.group.discos.DiscoGrupo;
+import com.github.britooo.looca.api.group.discos.Volume;
 import com.github.britooo.looca.api.group.memoria.Memoria;
 import com.github.britooo.looca.api.group.processador.Processador;
 import com.github.britooo.looca.api.group.processos.Processo;
@@ -34,53 +35,58 @@ public class MaquinaService {
     Memoria memoria = looca.getMemoria();
     Processador processador = looca.getProcessador();
     DiscoGrupo grupoDeDiscos = looca.getGrupoDeDiscos();
+    List<Volume> volumes = grupoDeDiscos.getVolumes();
     Rede rede = looca.getRede();
     ProcessoGrupo grupoDeProcessos = looca.getGrupoDeProcessos();
     RedeParametros parametros = rede.getParametros();
     RedeInterfaceGroup redeInterfaceGroup = rede.getGrupoDeInterfaces();
     List<RedeInterface> redeInterfaces = redeInterfaceGroup.getInterfaces();
 
-    MaquinaRepository executar = new MaquinaRepository();
-    ProcessosRepository executarProcesso = new ProcessosRepository();
+    MaquinaRepository maquinaRepository = new MaquinaRepository();
+    ProcessosRepository processoRepository = new ProcessosRepository();
 
 
 
     public void executarCadastro(Integer empresaId) {
-        executar.cadastrarSistema(sistema);
-        executar.cadastrarEndereco();
-        executar.cadastrarMaquina(parametros, empresaId);
-        executar.cadastrarComponente(processador, memoria, grupoDeDiscos, "processador");
-        executar.cadastrarComponente(processador, memoria, grupoDeDiscos, "memoria");
-        executar.cadastrarComponente(processador, memoria, grupoDeDiscos, "disco");
+        maquinaRepository.cadastrarSistema(sistema);
+        maquinaRepository.cadastrarEndereco();
+        maquinaRepository.cadastrarMaquina(parametros, empresaId);
+
+        maquinaRepository.cadastrarProcessador(processador.getNome(), processador.getId(),processador.getFrequencia(),
+                processador.getNumeroCpusFisicas(), processador.getNumeroCpusLogicas());
+
+        maquinaRepository.cadastrarMemoria(memoria.getTotal());
+
+        maquinaRepository.cadastrarDisco(volumes);
 
         Optional<RedeInterface> optRedeInterface = redeInterfaces.stream().max(Comparator.comparingLong(RedeInterface::getBytesEnviados));
 
         RedeInterface redeInterface = optRedeInterface.get();
 
-        executar.cadastrarInterfaceRede(redeInterface);
+        maquinaRepository.cadastrarInterfaceRede(redeInterface);
 
         // =============== Cadastrar Processos permitidos ================
         // Lista de processos permitidos são os primeiros processos que carrega
         // Passar esses processos para apenas o nome
         List<String> nomeProcessosPermitidos = grupoDeProcessos.getProcessos().stream()
                 .map(Processo::getNome)
-                .distinct().collect(Collectors.toList());
+                .distinct().toList();
 
         // Verificar se já está cadastrado:
-        List<String> processosPermitidosBanco = executarProcesso.processosPermitidos(empresaId);
+        List<String> processosPermitidosBanco = processoRepository.processosPermitidos(empresaId);
 
         List<String> processosFiltrados = nomeProcessosPermitidos.stream()
                 .filter(processo -> !processosPermitidosBanco.contains(processo))
                 .collect(Collectors.toList());
 
         if (!processosFiltrados.isEmpty()) {
-            executarProcesso.cadastrarProcessosPermitidosPadrao(processosFiltrados, empresaId);
+            processoRepository.cadastrarProcessosPermitidosPadrao(processosFiltrados, empresaId);
         }
         // ==================================================================
     }
 
     public Integer identificarMaquina() {
-        List<Integer> listaID = executar.buscarIdMaquina(rede.getParametros().getHostName());
+        List<Integer> listaID = maquinaRepository.buscarIdMaquina(rede.getParametros().getHostName());
         return listaID.get(0);
     }
 }
